layout created and overflow fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,6 @@ body {
   margin: 0;
 }
  .content {
-  min-height: calc(100vh - 159.5px);
+  min-height: calc(100vh - 190px);
 } 
 
